force-app/main/default/objects/Trial_Assignment__c/Trial_Assignment__c.object-meta.xml
<CustomObject>
    <label>Trial Assignment</label>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Trial Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>