force-app/main/default/objects/Trial_Assignment__c/fields/All_Requirements_Complete__c.field-meta.xml
<CustomField>
    <fullName>All_Requirements_Complete__c</fullName>
    <formula>AND( Total_Requirements__c &gt; 0 , Open_Requirements__c = 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Requirements Complete</label>
    <type>Checkbox</type>
</CustomField>