force-app/main/default/objects/Trial_Assignment__c/fields/Checklist_Initialized__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Initialized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checklist Initialized</label>
    <type>Checkbox</type>
</CustomField>