force-app/main/default/objects/Trial_Assignment__c/fields/Open_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Open_Requirements__c</fullName>
    <label>Open Requirements</label>
    <summaryFilterItems>
        <field>ClinicalTrialRequirement__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Verified</value>
    </summaryFilterItems>
    <summaryForeignKey>ClinicalTrialRequirement__c.Trial_Assignment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>