force-app/main/default/objects/Trial_Assignment__c/fields/Protocol_Name__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Protocol Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>