force-app/main/default/objects/Trial_Assignment__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Trial Assignments</relationshipLabel>
    <relationshipName>Trial_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>