force-app/main/default/objects/Trial_Assignment__c/fields/Study_ID__c.field-meta.xml
<CustomField>
    <fullName>Study_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Study ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>