force-app/main/default/objects/Trial_Assignment__c/fields/Total_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Total_Requirements__c</fullName>
    <label>Total Requirements</label>
    <summaryForeignKey>ClinicalTrialRequirement__c.Trial_Assignment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>