force-app/main/default/objects/Trial_Assignment__c/fields/Trial_Site__c.field-meta.xml
<CustomField>
    <fullName>Trial_Site__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trial Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>