force-app/main/default/objects/Trial_Assignment__c/validationRules/Enforce_Requirements_Before_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Requirements_Before_Active</fullName>
    <active>false</active>
    <description>Users  can only set Active__c = TRUE when All_Requirements_Complete__c = TRUE.</description>
    <errorConditionFormula>AND(Active__c , NOT(All_Requirements_Complete__c))</errorConditionFormula>
    <errorDisplayField>Active__c</errorDisplayField>
    <errorMessage>Cannot set Active to TRUE until all Clinical Trial Requirements are completed.</errorMessage>
</ValidationRule>